--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ function typeText(element,text,delay=40,html=false){
     typing();
 }
 
-/* FORM SUBMISSION */
+
 document.getElementById("predictForm").addEventListener("submit", async function(e){
     e.preventDefault();
     const resultDiv=document.getElementById("result");
@@ -248,7 +248,7 @@ document.getElementById("predictForm").addEventListener("submit", async function
     };
 
     try{
-        const response = await fetch("http://127.0.0.1:8000/predict",{
+        const response = await fetch("https://fastapi-predict-ig6s.onrender.com/predict",{
             method:"POST",
             headers:{"Content-Type":"application/json"},
             body:JSON.stringify(data)
