--- a/index.html
+++ b/index.html
@@ -2,156 +2,137 @@
 <html>
 <head>
     <title>E-Commerce Purchase Prediction</title>
-    <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+
     <style>
         body {
-            font-family: 'Share Tech Mono', monospace;
-            background: black;
-            color: #00ffcc;
-            overflow: hidden;
-        }
-
-        canvas#matrix {
-            position: fixed;
-            top: 0;
-            left: 0;
-            z-index: -1;
+            font-family: 'Inter', sans-serif;
+            background: #f4f6f9;
+            color: #1f2937;
+            margin: 0;
+            padding: 0;
         }
 
         .container {
-            width: 600px;
-            padding: 30px;
-            background: rgba(0,0,0,0.85);
-            border: 1px solid #00ffcc;
-            box-shadow: 0 0 25px rgba(0,255,204,0.3);
-            border-radius: 8px;
-            margin: 50px auto;
+            width: 640px;
+            padding: 32px;
+            background: #ffffff;
+            border-radius: 10px;
+            margin: 60px auto;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.08);
         }
 
         h2 {
             text-align: center;
-            margin-bottom: 25px;
-            color: #00ffcc;
-            letter-spacing: 2px;
-            text-shadow: 0 0 8px rgba(0,255,204,0.6);
+            margin-bottom: 30px;
+            font-weight: 600;
+            color: #0f172a;
         }
 
         label {
             font-size: 14px;
-            margin-top: 10px;
+            margin-top: 14px;
             display: block;
-            opacity: 0.9;
+            color: #374151;
+            font-weight: 500;
         }
 
         input, select {
             width: 100%;
-            padding: 10px;
+            padding: 10px 12px;
             margin-top: 6px;
-            background: #0b0f14;
-            border: 1px solid #00ffcc;
-            color: #00ffcc;
-            outline: none;
-            border-radius: 4px;
+            background: #ffffff;
+            border: 1px solid #d1d5db;
+            border-radius: 6px;
+            font-size: 14px;
         }
 
         input:focus, select:focus {
-            box-shadow: 0 0 10px rgba(0,255,204,0.6);
+            border-color: #2563eb;
+            outline: none;
+            box-shadow: 0 0 0 3px rgba(37,99,235,0.15);
         }
 
         button {
             width: 100%;
             padding: 12px;
-            margin-top: 20px;
-            background: linear-gradient(90deg,#00ffcc,#00ffaa);
+            margin-top: 24px;
+            background: #2563eb;
             border: none;
-            color: #000;
-            font-weight: bold;
-            letter-spacing: 2px;
+            color: #ffffff;
+            font-weight: 600;
+            font-size: 14px;
+            border-radius: 6px;
             cursor: pointer;
-            border-radius: 4px;
-            transition: all 0.3s ease;
         }
 
         button:hover {
-            background: linear-gradient(90deg,#00ffaa,#00ffcc);
-            box-shadow: 0 0 20px rgba(0,255,204,0.7);
+            background: #1d4ed8;
         }
 
         #result {
-            margin-top: 25px;
-            padding: 15px;
-            background: #0b0f14;
-            border-left: 4px solid #00ffcc;
-            font-size: 15px;
-            box-shadow: inset 0 0 10px rgba(0,255,204,0.2);
-            min-height: 40px;
+            margin-top: 28px;
+            padding: 16px;
+            background: #f9fafb;
+            border: 1px solid #e5e7eb;
+            border-radius: 6px;
+            font-size: 14px;
+            min-height: 48px;
             white-space: pre-wrap;
         }
 
-        .glitch {
-            color: #ff003c;
-            animation: glitch 0.3s infinite;
-        }
-
-        @keyframes glitch {
-            0% {text-shadow: 2px 0 #00ffcc, -2px 0 #ff003c;}
-            20% {text-shadow: -2px 0 #00ffcc, 2px 0 #ff003c;}
-            40% {text-shadow: 2px 2px #00ffcc, -2px -2px #ff003c;}
-            60% {text-shadow: -2px 2px #00ffcc, 2px -2px #ff003c;}
-            80% {text-shadow: 2px -2px #00ffcc, -2px 2px #ff003c;}
-            100% {text-shadow: 0 0 #00ffcc;}
-        }
-
         .loader {
-            border: 3px solid #0b0f14;
-            border-top: 3px solid #00ffcc;
+            border: 3px solid #e5e7eb;
+            border-top: 3px solid #2563eb;
             border-radius: 50%;
-            width: 24px;
-            height: 24px;
+            width: 18px;
+            height: 18px;
             animation: spin 1s linear infinite;
             display: inline-block;
             vertical-align: middle;
-            margin-left: 10px;
+            margin-left: 8px;
         }
 
         @keyframes spin {
-            0% {transform: rotate(0deg);}
-            100% {transform: rotate(360deg);}
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
         }
     </style>
 </head>
+
 <body>
-<canvas id="matrix"></canvas>
 
 <div class="container">
-    <h2>🕶 PURCHASE PREDICTION TERMINAL</h2>
+    <h2>E-Commerce Purchase Prediction</h2>
 
     <form id="predictForm">
+
         <label>Age</label>
         <input type="number" id="Age" required>
 
         <label>Gender</label>
         <select id="Gender">
-            <option value="Male">Male</option>
-            <option value="Female">Female</option>
+            <option>Male</option>
+            <option>Female</option>
         </select>
 
         <label>Country</label>
         <select id="Country">
-            <option value="India">India</option>
-            <option value="Australia">Australia</option>
-            <option value="USA">USA</option>
-            <option value="UK">UK</option>
-            <option value="Canada">Canada</option>
+            <option>India</option>
+            <option>Australia</option>
+            <option>USA</option>
+            <option>UK</option>
+            <option>Canada</option>
         </select>
 
         <label>Browsed Category</label>
         <select id="BrowsedCategory">
-            <option value="Fashion">Fashion</option>
-            <option value="Books">Books</option>
-            <option value="Home">Home</option>
-            <option value="Electronics">Electronics</option>
-            <option value="Sports">Sports</option>
+            <option>Fashion</option>
+            <option>Books</option>
+            <option>Home</option>
+            <option>Electronics</option>
+            <option>Sports</option>
         </select>
 
         <label>Viewed Time (minutes)</label>
@@ -162,103 +143,66 @@
 
         <label>Price Range</label>
         <select id="Price_range">
-            <option value="Cheap">Cheap</option>
-            <option value="Medium">Medium</option>
-            <option value="Expensive">Expensive</option>
+            <option>Cheap</option>
+            <option>Medium</option>
+            <option>Expensive</option>
         </select>
 
         <label>Age Group</label>
         <select id="Age_group">
-            <option value="Young">Young</option>
-            <option value="Middle">Middle</option>
-            <option value="Senior">Senior</option>
+            <option>Young</option>
+            <option>Middle</option>
+            <option>Senior</option>
         </select>
 
         <label>High Viewed Time</label>
         <select id="HighViewedTime">
-            <option value="0">0</option>
-            <option value="1">1</option>
+            <option value="0">No</option>
+            <option value="1">Yes</option>
         </select>
 
-        <button type="submit">EXECUTE PREDICTION</button>
+        <button type="submit">Run Prediction</button>
     </form>
 
     <div id="result"></div>
 </div>
 
 <script>
-/* MATRIX EFFECT */
-const canvas = document.getElementById('matrix');
-const ctx = canvas.getContext('2d');
-canvas.width = window.innerWidth;
-canvas.height = window.innerHeight;
-
-const letters = 'アカサタナハマヤラワABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789';
-const fontSize = 16;
-const columns = canvas.width / fontSize;
-const drops = Array(Math.floor(columns)).fill(1);
-
-function drawMatrix() {
-    ctx.fillStyle = 'rgba(0,0,0,0.05)';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-    ctx.fillStyle = '#00ffcc';
-    ctx.font = fontSize + 'px monospace';
-
-    for(let i=0;i<drops.length;i++){
-        const text = letters[Math.floor(Math.random()*letters.length)];
-        ctx.fillText(text,i*fontSize,drops[i]*fontSize);
-
-        if(drops[i]*fontSize>canvas.height && Math.random()>0.975) drops[i]=0;
-        drops[i]++;
-    }
-}
-setInterval(drawMatrix,50);
-
-/* TYPE TEXT FUNCTION */
-function typeText(element,text,delay=40,html=false){
-    element.innerHTML='';
-    let i=0;
-    function typing(){
-        if(i<text.length){
-            if(html) element.innerHTML=text.substring(0,i+1);
-            else element.textContent+=text.charAt(i);
-            i++;
-            setTimeout(typing,delay);
-        }
-    }
-    typing();
-}
-
-
-document.getElementById("predictForm").addEventListener("submit", async function(e){
+document.getElementById("predictForm").addEventListener("submit", async function(e) {
     e.preventDefault();
-    const resultDiv=document.getElementById("result");
-    resultDiv.innerHTML='EXECUTING PREDICTION <span class="loader"></span>';
 
-    const data={
-        Age: parseInt(document.getElementById("Age").value),
-        Gender: document.getElementById("Gender").value,
-        Country: document.getElementById("Country").value,
-        BrowsedCategory: document.getElementById("BrowsedCategory").value,
-        ViewedTimeMin: parseFloat(document.getElementById("ViewedTimeMin").value),
-        ProductPrice: parseFloat(document.getElementById("ProductPrice").value),
-        Price_range: document.getElementById("Price_range").value,
-        Age_group: document.getElementById("Age_group").value,
-        HighViewedTime: document.getElementById("HighViewedTime").value
+    const resultDiv = document.getElementById("result");
+    resultDiv.innerHTML = "Running prediction <span class='loader'></span>";
+
+    const data = {
+        Age: parseInt(Age.value),
+        Gender: Gender.value,
+        Country: Country.value,
+        BrowsedCategory: BrowsedCategory.value,
+        ViewedTimeMin: parseFloat(ViewedTimeMin.value),
+        ProductPrice: parseFloat(ProductPrice.value),
+        Price_range: Price_range.value,
+        Age_group: Age_group.value,
+        HighViewedTime: HighViewedTime.value
     };
 
-    try{
-        const response = await fetch("https://fastapi-predict-ig6s.onrender.com/predict",{
-            method:"POST",
-            headers:{"Content-Type":"application/json"},
-            body:JSON.stringify(data)
-        });
+    try {
+        const response = await fetch(
+            "https://fastapi-predict-ig6s.onrender.com/predict",
+            {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify(data)
+            }
+        );
+
         const result = await response.json();
-        let displayText=`> Prediction: ${result.prediction}\n> Probability: ${result.probability}`;
-        if(result.probability < 0.5) typeText(resultDiv, `<span class="glitch">${displayText}</span>`,50,true);
-        else typeText(resultDiv, displayText,50,false);
-    }catch(err){
-        typeText(resultDiv, `> SYSTEM ERROR: ${err}`,50);
+
+        resultDiv.textContent =
+            `Prediction: ${result.prediction}\nProbability: ${result.probability}`;
+
+    } catch (error) {
+        resultDiv.textContent = "Error connecting to prediction service.";
     }
 });
 </script>
